update: migrate from angular/flex-layout to CSS Grid

--- a/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
@@ -19,7 +19,7 @@
           class="mat-primary"
           (click)="cancelEdit()">
           <mat-icon>undo</mat-icon>
-          <span fxHide.lt-sm>
+          <span fxHide-lt-sm>
             {{ "cancel" | translate | titlecase }}
           </span>
         </button>
@@ -28,7 +28,7 @@
           type="submit" 
           mat-raised-button class="mat-primary">
           <mat-icon>save</mat-icon>
-          <span fxHide.lt-sm>
+          <span fxHide-lt-sm>
             {{ "save" | translate | titlecase }}
           </span>
         </button>
@@ -40,7 +40,7 @@
           class="mat-primary"
           (click)="setEditMode(true)">
           <mat-icon>edit</mat-icon>
-          <span fxHide.lt-sm>
+          <span fxHide-lt-sm>
             {{ "edit" | translate | titlecase }}
           </span>
         </button>
@@ -51,7 +51,7 @@
           class="mat-primary"
           (click)="saveAsPdf()">
           <mat-icon>print</mat-icon>
-          <span fxHide.lt-sm>
+          <span fxHide-lt-sm>
             {{ "print" | translate | titlecase }}
           </span>
         </button>
@@ -98,14 +98,14 @@
                   <div class="assignment-title" 
                     [matTooltip]="assignment.description ? assignment.description: null"
                     fxFlex="30" 
-                    [fxFlex.lt-sm]="isEditMode ? 100 : null">
+                    [fxFlex-lt-sm]="isEditMode ? 100 : null">
                     {{ assignment.title }}
                   </div>
                   
                   <div *ngIf="isEditMode; else view"
                     fxFlex="70"
-                    fxFlex.lt-sm="95"
-                    fxFlexOffset.lt-sm="5"
+                    fxFlex-lt-sm="95"
+                    fxFlexOffset-lt-sm="5"
                     fxLayout="row wrap"
                     fxLayoutAlign="space-between center">
                     <div [fxFlex]="assignment.part.withAssistant ? 49 : 100">
@@ -143,7 +143,7 @@
                   <ng-template #view>
                     <div fxFlex="70" 
                       fxFlex.lt-xs="95" 
-                      fxFlexOffset.lt-xs="5">
+                      fxFlexOffset-lt-xs="5">
                       <span class="assignment-assignee">{{ assignment.assignee?.fullName }}</span>
 
                       <span *ngIf="assignment.assistant" class="assignment-assistant">
