--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.scss
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.scss
@@ -51,3 +51,85 @@ h2 {
   .assignment-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+//migrate to angular/flex-layout to CSS Grid
+  
+[fxLayout="row"] {
+  flex-direction: row;
+}
+
+[fxLayout="column"] {
+  flex-direction: column;
+}
+
+[fxLayoutAlign="start center"] {
+  display: flex;
+  place-content: flex-start flex-center;
+  align-items: center;
+}
+
+[fxLayout="row wrap"] {
+  flex-flow: row wrap;
+}
+
+[fxLayoutAlign="start strech"] {
+  display: flex;
+  place-content: flex-start flex-strech;
+  align-items: center;
+}
+
+[fxLayoutAlign="space-between center"] {
+  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+}
+
+[fxLayoutAlign="space-around start"] {
+  justify-content: space-between;
+  justify-content: start;
+  align-items: center;
+}
+
+[fxFlex="95"] {
+  flex: 1 1 95%;
+  box-sizing: border-box;
+  max-width: 95%;
+}
+
+[fxFlex="100"] {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  max-width: 100%;
+}
+
+[fxFlex="70"] {
+  flex: 1 1 70%;
+  box-sizing: border-box;
+  max-width: 70%;
+}
+
+[fxFlex="nogrow"] {
+  flex: 0 1 auto;
+  box-sizing: border-box;
+}
+
+[fxLayoutGap="1em"] { gap: 1em; }
+
+[fxFlexOffset-lt-sm="5"] { margin-left: 5%; }
+
+[fxHide-lt-sm] { @media screen and (max-width: 599px) { display: none; } }
+
+[fxHide-lt-sm="95"] { @media screen and (width: 95px) { display: none; } }
+
+[fxFlex] {
+  box-sizing: border-box;
+  display: flex;
+  flex: 1 1 100%;
+}
+
+[fxFill] {
+  height: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  width: 100%;
+}
