--- a/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
@@ -1,4 +1,3 @@
-<!--  -->
 <app-loader *ngIf="loading"></app-loader>
 
 <div *ngIf="mPrograms$ | withLoading | async as mProgramsWithLoading">
@@ -95,11 +94,11 @@
                   fxLayout="row wrap"
                   fxLayoutAlign="start center"
                   class="assignment-line">
-                  <!-- [matTooltip]="assignment.description ? assignment.description: null"
-                    fxFlex="30" 
-                    [fxFlex.lt-sm]="isEditMode ? 100 : null"  -->
+                  
                   <div class="assignment-title" 
-                    >
+                    [matTooltip]="assignment.description ? assignment.description: null"
+                    fxFlex="30" 
+                    [fxFlex.lt-sm]="isEditMode ? 100 : null">
                     {{ assignment.title }}
                   </div>
                   
@@ -109,8 +108,7 @@
                     fxFlexOffset.lt-sm="5"
                     fxLayout="row wrap"
                     fxLayoutAlign="space-between center">
-                    <!--[fxFlex]="assignment.part.withAssistant ? 49 : 100"  -->
-                    <div >
+                    <div [fxFlex]="assignment.part.withAssistant ? 49 : 100">
                       <app-picker
                         [optionsTemplate]="displayComponentRef.componentType"
                         title="{{ assignment.title | titlecase }}"
