--- a/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
@@ -9,26 +9,24 @@
       [formGroup]="programsForm" 
       (ngSubmit)="onSubmit()">
       <div *ngIf="mPrograms.size && !loading"
-        fxLayout="row"
-        fxLayoutAlign="start center"
-        fxLayoutGap="1em"> <!-- During loading no buttons-->
+        class="d-flex flex-row justify-content-start align-items-center"> <!-- During loading no buttons-->
         <!-- FORM BUTTONS-->
         <button *ngIf="isEditMode"
           type="reset"
           mat-raised-button
-          class="mat-primary"
+          class="mat-primary mb-3"
           (click)="cancelEdit()">
           <mat-icon>undo</mat-icon>
-          <span fxHide.lt-sm>
+          <span class="d-sm-none">
             {{ "cancel" | translate | titlecase }}
           </span>
         </button>
 
         <button *ngIf="isEditMode"
-          type="submit" 
-          mat-raised-button class="mat-primary">
+          type="submit"
+          mat-raised-button class="mat-primary mt-3">
           <mat-icon>save</mat-icon>
-          <span fxHide.lt-sm>
+          <span class="d-sm-none">
             {{ "save" | translate | titlecase }}
           </span>
         </button>
@@ -37,10 +35,10 @@
         <button *ngIf="!isEditMode"
           type="button"
           mat-raised-button
-          class="mat-primary"
+          class="mat-primary mt-3"
           (click)="setEditMode(true)">
           <mat-icon>edit</mat-icon>
-          <span fxHide.lt-sm>
+          <span class="d-sm-none">
             {{ "edit" | translate | titlecase }}
           </span>
         </button>
@@ -48,10 +46,10 @@
         <button *ngIf="!isEditMode"
           type="button"
           mat-raised-button
-          class="mat-primary"
+          class="mat-primary mt-3"
           (click)="saveAsPdf()">
           <mat-icon>print</mat-icon>
-          <span fxHide.lt-sm>
+          <span class="d-sm-none">
             {{ "print" | translate | titlecase }}
           </span>
         </button>
@@ -84,31 +82,23 @@
             }">
             <h2>{{ program.week | translateDate: "MMM-D" : {days: 6} | async }}</h2>
 
-            <div formArrayName="assignments" 
-              fxLayout="column"
-              fxLayoutAlign="start stretch">
+            <div formArrayName="assignments"
+              class="d-flex flex-column justify-content-start align-items-stretch">
               <ng-container *ngFor="let assignment of program.assignments">
                 <div *ngIf="isWorkingOnPart(assignment.part)"
                   [formGroupName]="assignment.position"
-                  fxFlex 
-                  fxLayout="row wrap"
-                  fxLayoutAlign="start center"
-                  class="assignment-line">
+                  class="d-flex col-12 flex-row flex-wrap justify-content-start align-items-center assignment-line">
                   
-                  <div class="assignment-title" 
+                  <div class="assignment-title"
                     [matTooltip]="assignment.description ? assignment.description: null"
-                    fxFlex="30" 
-                    [fxFlex.lt-sm]="isEditMode ? 100 : null">
+                    class="isEditMode ? d-flex w-30 col-sm-12 : d-flex w-30 d-sm-none">
                     {{ assignment.title }}
                   </div>
                   
                   <div *ngIf="isEditMode; else view"
-                    fxFlex="70"
-                    fxFlex.lt-sm="95"
-                    fxFlexOffset.lt-sm="5"
-                    fxLayout="row wrap"
-                    fxLayoutAlign="space-between center">
-                    <div [fxFlex]="assignment.part.withAssistant ? 49 : 100">
+                    class="w-70 flex-row flex-wrap col-sm-11 justify-content-start align-items-center mr-sm-5 assignment-line"
+                    >
+                    <div class="assignment.part.withAssistant ? w-49 : w-100">
                       <app-picker
                         [optionsTemplate]="displayComponentRef.componentType"
                         title="{{ assignment.title | titlecase }}"
@@ -123,7 +113,7 @@
                       ></app-picker>
                     </div>
 
-                    <div *ngIf="assignment.part.withAssistant" fxFlex="49">
+                    <div *ngIf="assignment.part.withAssistant" class="w-49">
                       
                       <app-picker
                         [optionsTemplate]="displayComponentRef.componentType"
@@ -141,9 +131,7 @@
                   </div>
 
                   <ng-template #view>
-                    <div fxFlex="70" 
-                      fxFlex.lt-xs="95" 
-                      fxFlexOffset.lt-xs="5">
+                    <div class="d-flex w-70 col-xs-11 mr-sm-5">
                       <span class="assignment-assignee">{{ assignment.assignee?.fullName }}</span>
 
                       <span *ngIf="assignment.assistant" class="assignment-assistant">
