--- a/src/app/modules/assignments/components/assignable-list/assignable-list.component.html
+++ b/src/app/modules/assignments/components/assignable-list/assignable-list.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title>
-  <div class=" flex-fill flex-row space-y-4 align-items-center ">
+  <div class=" d-flex flex-fill flex-row justify-content-between align-items-center ">
     <!-- Title & close buttons-->
     <span>
       {{ data.title | translate }}
@@ -14,10 +14,10 @@
       <mat-icon>close</mat-icon>
     </button>
   </div>
-  <p class=" flex-fill flex-row space-y-4 align-items-center " > 
+  <p class="d-flex flex-fill flex-row justify-content-between align-items-center " > 
     <!-- Sort buttons-->
     <button
-      fxFlex="45"
+    class="d-flex w-95"
       mat-raised-button
       type="button"
       (click)="sort('assignmentsNumber')">
@@ -33,7 +33,7 @@
       <mat-icon>arrow_upward</mat-icon>
     </button>
   </p>
-  <p class=" flex-fill flex-row space-y-4 align-items-center ">
+  <p class="d-flex flex-fill flex-row justify-content-between align-items-center ">
     <button
     class="d-flex w-95"
       mat-raised-button
