--- a/src/app/modules/assignments/pages/assignment-list/assignment-list.component.html
+++ b/src/app/modules/assignments/pages/assignment-list/assignment-list.component.html
@@ -1,5 +1,5 @@
 <!-- Month selector -->
-<div fxLayout="row" fxLayoutAlign="center center">
+<div class="d-flex flex-row justify-content-center align-items-center">
   <app-month-picker
     [disablePicker]="isEditMode"
     (monthSelected)="getSelectedMonth($event)"
