--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -1,18 +1,17 @@
-<div fxLayout="column" fxFlexFill fxLayoutAlign="center center" id="auth">
-  <div fxLayout="column" class="mat-elevation-z4 login-block">
+<div class="d-flex flex-column flex-fill justify-content-center align-items-center" id="auth">
+  <div class="d-flex flex-column" class="mat-elevation-z4 login-block">
     <mat-card>
       <mat-card-title><h1>Thassign</h1></mat-card-title>
       <mat-card-content>
         <h2>{{ "log-in-to-your-account" | translate }}</h2>
 
         <form
-          fxLayout="column"
-          fxLayoutAlign="start stretch"
+        class="d-flex flex-column mb-3 justify-content-start align-items-stretch"
           fxLayoutGap="1em"
           [formGroup]="userForm"
           (ngSubmit)="submit('emailPassword')"
         >
-          <div *ngIf="formMessages.all" class="help is-danger">
+          <div *ngIf="formMessages.all" class="help is-danger mt-3">
             <legend>{{ formMessages.all | translate }}</legend>
           </div>
           <mat-form-field
@@ -30,7 +29,7 @@
               matInput
             />
           </mat-form-field>
-          <div *ngIf="formMessages.email" class="help is-danger">
+          <div *ngIf="formMessages.email" class="help is-danger mt-3">
             {{ formMessages.email | translate }}
           </div>
           <mat-form-field
@@ -47,7 +46,7 @@
               matInput
             />
           </mat-form-field>
-          <div *ngIf="formMessages.password" class="help is-danger">
+          <div *ngIf="formMessages.password" class="help is-danger mt-3">
             {{ formMessages.password | translate }}
           </div>
           <mat-form-field
@@ -65,15 +64,15 @@
               matInput
             />
           </mat-form-field>
-          <div *ngIf="formMessages.repeatPassword" class="help is-danger">
+          <div *ngIf="formMessages.repeatPassword" class="help is-danger mt-3">
             {{ formMessages.repeatPassword | translate }}
           </div>
           <app-loader *ngIf="isLoading"></app-loader>
-          <div fxLayout="row-reverse" fxLayoutAlign="space-between center">
+          <div class="d-flex flex-row-reverse justify-content-between align-items-center mt-3">
             <!-- Sign in button -->
             <button
               mat-raised-button
-              fxAlign="start"
+              class="d-flex align-items-start"
               color="primary"
               type="submit"
               [disabled]="!userForm.valid"
@@ -97,7 +96,7 @@
             </button>
           </div>
           <!-- Social login button -->
-          <div fxLayout="row" fxLayoutAlign="center stretch">
+          <div class="d-flex flex-row justify-content-center align-items-stretch mt-3" >
             <button
               mat-raised-button
               type="button"
