--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -1,7 +1,5 @@
 <div
-  fxLayout="column"
-  fxFlexFill
-  fxLayoutAlign="center center"
+  class="d-flex flex-column flex-fill justify-content-center align-items-center"
   style="
     background-image: url('../../../assets/login11.jpg');
     height: 100%;
@@ -10,7 +8,7 @@
     background-size: cover;
   "
 >
-  <div fxLayout="column">
+  <div class="d-flex flex-column">
     <div class="mat-elevation-z4">
       <mat-card>
         <mat-card-title
@@ -21,8 +19,7 @@
         </mat-card-title>
         <mat-card-content>
           <form
-            fxLayout="column"
-            fxLayoutAlign="start stretch"
+            class="d-flex flex-column justify-content-start align-items-stretch"
             [formGroup]="userForm"
             (ngSubmit)="register()"
           >
