feat: migrate from angular/flex-layout to bootstrap on users folder

--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
@@ -76,7 +76,7 @@
           <button
             *ngIf="isEditMode"
             type="button"
-            class="flex-grow-0"
+            class="d-flex flex-grow-0"
             mat-raised-button
             matTooltip="{{ 'add-new-assignment' | translate }}"
             [disabled]="studentsForm.disabled"
