--- a/src/app/modules/assignments/components/assignment/assignment.component.html
+++ b/src/app/modules/assignments/components/assignment/assignment.component.html
@@ -17,7 +17,7 @@
       </div>
       <!-- PART -->
       <div class="d-flex w-30 col-sm-auto">
-        <mat-form-field fxFill>
+        <mat-form-field class="d-flex flex-fill">
           <mat-select
             placeholder="{{ 'assignment' | translate | titlecase }}"
             [compareWith]="compareFn"
