--- a/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
@@ -98,7 +98,7 @@
                   <div *ngIf="isEditMode; else view"
                     class="w-70 flex-row flex-wrap col-sm-11 justify-content-start align-items-center mr-sm-5 assignment-line"
                     >
-                    <div class="assignment.part.withAssistant ? w-49 : w-100">
+                    <div class="assignment.part.withAssistant ? d-flex w-49 : d-flex w-100">
                       <app-picker
                         [optionsTemplate]="displayComponentRef.componentType"
                         title="{{ assignment.title | titlecase }}"
@@ -113,7 +113,7 @@
                       ></app-picker>
                     </div>
 
-                    <div *ngIf="assignment.part.withAssistant" class="w-49">
+                    <div *ngIf="assignment.part.withAssistant" class="d-flex w-49">
                       
                       <app-picker
                         [optionsTemplate]="displayComponentRef.componentType"
