--- a/src/app/modules/users/components/user-filter/user-filter.component.html
+++ b/src/app/modules/users/components/user-filter/user-filter.component.html
@@ -1,13 +1,13 @@
-<div fxLayout="row wrap" fxLayoutAlign="center start">
+<div  class="d-flex flex-row flex-wrap justify-content-center align-items-start">
   <mat-expansion-panel
-    fxFlex="90"
+    class="d-flex w-90"
     #mepSearch="matExpansionPanel"
     [expanded]="displayMore"
     [hideToggle]="false"
   >
     <mat-expansion-panel-header>
-      <div fxFlex fxLayout="row wrap" fxLayoutAlign="center stretch">
-        <mat-form-field fxFlex="90" fxFlex.lt-md="80" fxFlex.lt-sm="70">
+      <div class="d-flex flex-row flex-wrap flex-grow-1 justify-content-center align-items-stretch">
+        <mat-form-field class="d-flex w-90 col-sm-8 col-md-9 ">
           <!-- Disabled autocomplete -->
           <!-- [matAutocomplete]="auto" -->
           <input
