--- a/src/app/modules/users/pages/user-list/user-list.component.html
+++ b/src/app/modules/users/pages/user-list/user-list.component.html
@@ -15,27 +15,26 @@
 </div>
 
 <!-- Generate button -->
-<div fxLayout="row" fxLayoutAlign="end start">
+<div class="d-flex flex-row justify-content-end align-items-start">
   <button
     mat-raised-button
     matTooltip="{{ 'generate-users' | translate | titlecase }}"
     (click)="generateUsers()"
-    fxFlex="1"
-    fxFlexAlign="right"
+    class="d-flex flex-grow-1 justify-content-end "
   >
     <mat-icon>autorenew</mat-icon>
   </button>
 </div>
 
 <!-- Table control bar -->
-<div fxLayout="row" fxLayoutAlign="space-between stretch">
-  <div fxFlex="30px" fxFlexOffset="25px" fxFlexAlign="center">
+<div class="d-flex flex-row justify-content-between align-items-stretch">
+  <div class="d-flex mr-25 w-30 justify-content-center ">
     <mat-checkbox
       [checked]="masterChecked"
       matTooltip="{{ 'select-all' | translate }}"
     ></mat-checkbox>
   </div>
-  <div fxFlexAlign="center">
+  <div class="d-flex justify-content-center ">
     <button mat-icon-button (click)="openSort($event)">
       <mat-icon>sort</mat-icon>
     </button>
@@ -53,7 +52,7 @@
       </mat-icon>
     </button>
   </div>
-  <div fxFlex="30px" fxFlexAlign="center">
+  <div class="d-flex w-30 justify-content-center ">
     <button
       mat-icon-button
       [disabled]="noUserChecked"
@@ -69,7 +68,7 @@
       <mat-icon>delete</mat-icon>
     </button>
   </div>
-  <div fxFlex></div>
+  <div class="d-flex flex-grow-1"></div>
 </div>
 
 <mat-paginator
@@ -93,20 +92,13 @@
       *ngFor="let user of pUsers; last as last; trackBy: trackById"
     >
       <mat-expansion-panel-header
-        fxLayout="row"
-        fxLayoutAlign="start stretch"
-        fxLayoutGap
+        class=" d-flex flex-row gap-1 justify-content-start align-items-stretch"
       >
         <mat-panel-title
-          fxFlex
-          fxFlex.lt-sm="100"
-          fxFlexAlign="center"
-          fxLayout="row"
-          fxLayoutAlign="space-between stretch"
-          fxLayoutGap="15px"
+          class="d-flex flex-grow-1 flex-row align-items-center col-sm-12 gap-1 justify-content-between align-items-stretch"
         >
           <!-- Checkbox -->
-          <div fxFlex="25px" fxFlexAlign="center">
+          <div class=" d-flex w-25 align-items-center">
             <mat-checkbox
               name="userCheckbox"
               [value]="user._id"
@@ -117,21 +109,21 @@
           </div>
 
           <!-- Type icon -->
-          <div fxFlex="30px">
+          <div class=" d-flex w-30">
             <img class="genre-icon" src="/assets/icon/{{ user.type }}.svg" />
           </div>
 
           <!-- User name -->
-          <div fxFlex fxFlexAlign="center">
+          <div  class=" d-flex flex-grow-1 align-items-center" >
             {{ user.fullName }}
           </div>
         </mat-panel-title>
-        <mat-panel-description fxFlex fxFlexAlign="center">
-          <div fxFlex fxHide.lt-sm *ngIf="user.phone">
+        <mat-panel-description class=" d-flex flex-grow-1 align-items-center" >
+          <div class=" d-flex flex-grow-1 d-sm-none" *ngIf="user.phone">
             <mat-icon inline="true">phone</mat-icon> {{ user.phone }}
           </div>
 
-          <div fxFlex fxHide.lt-md *ngIf="user.email">
+          <div class=" d-flex flex-grow-1 d-sm-none" *ngIf="user.email">
             <mat-icon inline="true">mail_outline</mat-icon>
             {{ user.email }}
           </div>
@@ -142,25 +134,23 @@
         <!-- Lazy rendering -->
 
         <div
-          fxLayout="row wrap"
-          fxLayout.lt-sm="column"
-          fxLayoutAlign="start stretch"
+          class="d-flex flex-row flex-wrap flex-sm-column justify-content-start align-items-stretch "
         >
-          <div fxFlex="45">
+          <div class="d-flex w-45 ">
             <mat-icon inline="true">person</mat-icon>
             {{ user.type }}
           </div>
 
-          <div fxFlex="45" *ngIf="user.progress">
+          <div class="d-flex w-45 " *ngIf="user.progress">
             <mat-icon inline="true">info</mat-icon>
             {{ user.progress }}
           </div>
 
-          <div fxFlex fxHide.gt-xs *ngIf="user.phone">
+          <div class="d-flex flex-grow-1 d-sm-none d-md-none d-lg-none " *ngIf="user.phone">
             <mat-icon inline="true">phone</mat-icon>
             {{ user.phone }}
           </div>
-          <div fxFlex fxHide.gt-sm *ngIf="user.email">
+          <div class="d-flex flex-grow-1 d-md-none d-lg-none " *ngIf="user.email">
             <mat-icon inline="true">mail_outline</mat-icon>
             {{ user.email }}
           </div>
@@ -168,8 +158,7 @@
 
         <mat-chip-list
           selectable="false"
-          fxLayout="row"
-          fxLayoutAlign="start stretch"
+          class="d-flex flex-row justify-content-start align-items-stretch"
         >
           <mat-chip
             class="mat-chip-list-stacked"
