feat: migrate from angular/flex-layout to bootstrap on shared components

--- a/src/app/shared/components/import-epub/import-epub.component.html
+++ b/src/app/shared/components/import-epub/import-epub.component.html
@@ -1,11 +1,10 @@
-<div fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="15px">
-  <div fxFlex fxLayout="row" fxLayoutAlign="start start">
-    <button fxFlex="10" mat-raised-button (click)="prevPage()">
+<div  class="d-flex flex-column justify-content-start align-items-center gap-1 " >
+  <div class=" d-flex flex-row flex-grow-1 justify-content-start align-items-start" >
+    <button class="d-flex w-10" mat-raised-button (click)="prevPage()">
       <mat-icon>arrow_left</mat-icon>
     </button>
     <button
-      fxFlex="10"
-      fxFlexOffset="90"
+      class="d-flex w-10 row col-10 mx-auto"
       mat-raised-button
       (click)="nextPage()"
     >
@@ -13,10 +12,10 @@
     </button>
   </div>
 
-  <div fxFlex="80" fxLayout="row" fxLayoutAlign="center start">
+  <div class="d-flex w-80 flex-row justify-content-center align-items-start ">
     <div
       #epubArea
-      fxFlex="80"
+      class="d-flex w-80"
       class="bg-color-white"
       [innerHtml]="displayedProgram"
     ></div>
