--- a/src/app/shared/components/month-picker/month-picker.component.html
+++ b/src/app/shared/components/month-picker/month-picker.component.html
@@ -10,8 +10,8 @@
 </button>
 &nbsp;
 
-<label fxFlex.lt-md="90">
-  <span fxHide>{{ 'month' | translate | titlecase }}</span>
+<label class="d-flex col-md-9 " >
+  <span class="d-flex d-none ">{{ 'month' | translate | titlecase }}</span>
   <mat-form-field>
     <input
       matInput
