--- a/src/app/shared/components/user-menu/user-menu.component.html
+++ b/src/app/shared/components/user-menu/user-menu.component.html
@@ -6,7 +6,7 @@
     [class.open]="isOpen"
   >
     <!-- [ngStyle.xs]="{ 'min-width': '70px' }" -->
-    <span fxLayout="row" fxLayoutAlign="start center">
+    <span class="d-flex flex-row justify-content-start align-items-center" >
       <img class="avatar" src="assets/images/avatars/noavatar.png" />
       <!-- fxHide fxShow.gt-xs -->
       <span class="name">{{ currentUser?.email }}</span>
