--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,10 +1,8 @@
 <!-- <stbui-loading *ngIf="showLoading"></stbui-loading> -->
 <mat-toolbar
-  fxFlexLayout="row"
-  fxLayoutAlign="space-between center"
-  class="mat-elevation-z4"
+  class="d-flex flex-row justify-content-between align-items-center mat-elevation-z4"
 >
-  <div fxFlex>
+  <div class="d-flex flex-grow-1" >
     <button
       mat-icon-button
       (click)="sidenav.toggle(); drawer.toggle()"
@@ -18,7 +16,7 @@
   </div>
 
   <!-- Right icons and user menu -->
-  <div fxFlex fxFlexLayout="row" fxLayoutAlign="end center">
+  <div class="d-flex flex-grow-1 flex-row justify-content-end align-items-center ">
     <button mat-icon-button (click)="showNotificationsDialog($event)">
       <mat-icon [matBadge]="messageService.messages.length"
         >notifications_none</mat-icon
