--- a/src/app/layouts/content-layout/content-layout.component.html
+++ b/src/app/layouts/content-layout/content-layout.component.html
@@ -34,8 +34,8 @@
           style="z-index: 500;"
         ></ma-toolbar>
 
-        <div fxLayout="row" fxLayoutAlign="center start">
-          <div fxFlex="95" class="mat-elevation-z4">
+        <div class="d-flex flex-row justify-content-center align-items-start">
+          <div class="d-flex w-95 mat-elevation-z4">
             <router-outlet></router-outlet>
           </div>
         </div>
