--- a/src/app/shared/components/month-picker/month-picker.component.html
+++ b/src/app/shared/components/month-picker/month-picker.component.html
@@ -10,7 +10,7 @@
 </button>
 &nbsp;
 
-<label class="d-flex col-md-9 " >
+<label class="d-flex col-md-11 " >
   <span class="d-flex d-none ">{{ 'month' | translate | titlecase }}</span>
   <mat-form-field>
     <input
@@ -19,7 +19,7 @@
       [matDatepicker]="monthPicker"
       [formControl]="date"
       class="center"
-      style="text-align: center"
+      style="text-align: center;"
     />
     <mat-datepicker
       #monthPicker
