--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
@@ -11,7 +11,7 @@
     class="d-flex flex-column justify-content-between align-items-center"
   >
     <!-- FORM BUTTONS-->
-    <div *ngIf="isEditMode; else viewButtons" fxFlex>
+    <div *ngIf="isEditMode; else viewButtons" class="d-flex flex-grow-1 " >
       <!-- 
       fxLayout="row" fxLayoutAlign="space-around center" -->
       <button
@@ -87,7 +87,7 @@
 
           <!--<div >-->
           <div
-            class="d-flex w-100"
+            class="d-flex col-12"
             cdkDropList
             cdkDropListData="{{ wIndex }}"
             [ngClass]="{ 'assignments-list': isEditMode }"
