--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column flex-fill justify-content-center align-items-center" id="auth">
-  <div class="d-flex flex-column" class="mat-elevation-z4 login-block">
+  <div class="d-flex flex-column mat-elevation-z4 login-block">
     <mat-card>
       <mat-card-title><h1>Thassign</h1></mat-card-title>
       <mat-card-content>
@@ -7,11 +7,10 @@
 
         <form
         class="d-flex flex-column mb-3 justify-content-start align-items-stretch"
-          fxLayoutGap="1em"
           [formGroup]="userForm"
           (ngSubmit)="submit('emailPassword')"
         >
-          <div *ngIf="formMessages.all" class="help is-danger mt-3">
+          <div *ngIf="formMessages.all" class="help is-danger mt-5">
             <legend>{{ formMessages.all | translate }}</legend>
           </div>
           <mat-form-field
@@ -29,7 +28,7 @@
               matInput
             />
           </mat-form-field>
-          <div *ngIf="formMessages.email" class="help is-danger mt-3">
+          <div *ngIf="formMessages.email" class="help is-danger mt-5">
             {{ formMessages.email | translate }}
           </div>
           <mat-form-field
@@ -46,7 +45,7 @@
               matInput
             />
           </mat-form-field>
-          <div *ngIf="formMessages.password" class="help is-danger mt-3">
+          <div *ngIf="formMessages.password" class="help is-danger mt-5">
             {{ formMessages.password | translate }}
           </div>
           <mat-form-field
@@ -64,7 +63,7 @@
               matInput
             />
           </mat-form-field>
-          <div *ngIf="formMessages.repeatPassword" class="help is-danger mt-3">
+          <div *ngIf="formMessages.repeatPassword" class="help is-danger mt-5">
             {{ formMessages.repeatPassword | translate }}
           </div>
           <app-loader *ngIf="isLoading"></app-loader>
@@ -96,7 +95,7 @@
             </button>
           </div>
           <!-- Social login button -->
-          <div class="d-flex flex-row justify-content-center align-items-stretch mt-3" >
+          <div class="d-flex justify-content-center align-items-stretch flex-row mt-3" >
             <button
               mat-raised-button
               type="button"
@@ -108,6 +107,7 @@
                 aria-hidden="false"
                 aria-label="Google logo"
                 matPrefix
+                style="height: 40px;"
               ></mat-icon>
               &nbsp;
               <!-- <img src="/assets/icon/google-logo.svg" /> -->
