--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,11 +1,11 @@
-<div class="d-flex flex-column flex-fill justify-content-center align-items-center" style="
+<div class="d-flex flex-column justify-content-center align-items-center flex-fill" style="
     background-image: url('../../../assets/login11.jpg');
     height: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   ">
-  <div class="d-flex flex-column ">
+  <div class="d-flex flex-column flex-grow-1">
     <div class="mat-elevation-z4">
       <mat-card>
         <mat-card-title>User login
