--- a/src/app/modules/users/pages/user-list/user-list.component.html
+++ b/src/app/modules/users/pages/user-list/user-list.component.html
@@ -20,7 +20,7 @@
     mat-raised-button
     matTooltip="{{ 'generate-users' | translate | titlecase }}"
     (click)="generateUsers()"
-    class="d-flex flex-grow-1 justify-content-end "
+    class="d-flex justify-content-end "
   >
     <mat-icon>autorenew</mat-icon>
   </button>
@@ -28,8 +28,8 @@
 
 <!-- Table control bar -->
 <div class="d-flex flex-row justify-content-between align-items-stretch">
-  <div class="d-flex mr-25 w-30 justify-content-center ">
-    <mat-checkbox
+  <div class="d-flex mx-3 align-items-center gap-2 " style="width: 30px;" >
+    <mat-checkbox class="gap-1"
       [checked]="masterChecked"
       matTooltip="{{ 'select-all' | translate }}"
     ></mat-checkbox>
@@ -52,7 +52,7 @@
       </mat-icon>
     </button>
   </div>
-  <div class="d-flex w-30 justify-content-center ">
+  <div class="d-flex justify-content-center " style="width: 30px;">
     <button
       mat-icon-button
       [disabled]="noUserChecked"
@@ -98,7 +98,7 @@
           class="d-flex flex-grow-1 flex-row align-items-center col-sm-12 gap-1 justify-content-between align-items-stretch"
         >
           <!-- Checkbox -->
-          <div class=" d-flex w-25 align-items-center">
+          <div class=" d-flex align-items-center" style="width: 25px; "  >
             <mat-checkbox
               name="userCheckbox"
               [value]="user._id"
@@ -109,7 +109,7 @@
           </div>
 
           <!-- Type icon -->
-          <div class=" d-flex w-30">
+          <div class=" d-flex" style="width: 30px;">
             <img class="genre-icon" src="/assets/icon/{{ user.type }}.svg" />
           </div>
 
@@ -119,11 +119,11 @@
           </div>
         </mat-panel-title>
         <mat-panel-description class=" d-flex flex-grow-1 align-items-center" >
-          <div class=" d-flex flex-grow-1 d-sm-none" *ngIf="user.phone">
+          <div class=" d-flex flex-grow-1 d-none d-sm-block" *ngIf="user.phone">
             <mat-icon inline="true">phone</mat-icon> {{ user.phone }}
           </div>
 
-          <div class=" d-flex flex-grow-1 d-sm-none" *ngIf="user.email">
+          <div class=" d-flex flex-grow-1 d-none d-md-block" *ngIf="user.email">
             <mat-icon inline="true">mail_outline</mat-icon>
             {{ user.email }}
           </div>
@@ -136,21 +136,21 @@
         <div
           class="d-flex flex-row flex-wrap flex-sm-column justify-content-start align-items-stretch "
         >
-          <div class="d-flex w-45 ">
+          <div class="d-flex w-30 ">
             <mat-icon inline="true">person</mat-icon>
             {{ user.type }}
           </div>
 
-          <div class="d-flex w-45 " *ngIf="user.progress">
+          <div class="d-flex w-30" *ngIf="user.progress">
             <mat-icon inline="true">info</mat-icon>
             {{ user.progress }}
           </div>
 
-          <div class="d-flex flex-grow-1 d-sm-none d-md-none d-lg-none " *ngIf="user.phone">
+          <div class="d-flex flex-grow-1 d-xs-none " *ngIf="user.phone">
             <mat-icon inline="true">phone</mat-icon>
             {{ user.phone }}
           </div>
-          <div class="d-flex flex-grow-1 d-md-none d-lg-none " *ngIf="user.email">
+          <div class="d-flex flex-grow-1 d-sm-none " *ngIf="user.email">
             <mat-icon inline="true">mail_outline</mat-icon>
             {{ user.email }}
           </div>
