--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,6 +1,5 @@
 <mat-form-field
-  class="d-flex flex-grow-1"
-  class="search"
+  class="d-flex flex-grow-1 search"
   [ngClass]="{ 'search-open': open == true }"
 >
   <input
