--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,6 +1,8 @@
-<div class="d-flex flex-column justify-content-center align-items-center flex-fill" style="
+<div class="d-flex flex-fill flex-column justify-content-center align-items-center " style="
     background-image: url('../../../assets/login11.jpg');
     height: 100%;
+    position: fixed;
+    overflow:hidden;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
