--- a/src/app/shared/components/month-picker/month-picker.component.html
+++ b/src/app/shared/components/month-picker/month-picker.component.html
@@ -1,4 +1,5 @@
 <!-- Previous button -->
+
 <button
   mat-raised-button
   title="{{ 'previous-month' | translate }}"
@@ -10,8 +11,8 @@
 </button>
 &nbsp;
 
-<label class="d-flex col-md-11 " >
-  <span class="d-flex d-none ">{{ 'month' | translate | titlecase }}</span>
+<label class="col-md-11 " >
+  <span class=" d-none ">{{ 'month' | translate | titlecase }}</span>
   <mat-form-field>
     <input
       matInput
