--- a/src/app/modules/users/components/user-detail/user-detail.component.html
+++ b/src/app/modules/users/components/user-detail/user-detail.component.html
@@ -1,20 +1,20 @@
 <h2 mat-dialog-title class="center">{{ user.fullName }}</h2>
 
 <div>
-  <div class="d-flex flex-row flex-wrap col-sm justify-content-around align-items-stretch justify-content-sm-center align-items-sm-start">
-    <div class="d-flex w-45">
+  <div class="d-flex flex-row flex-wrap flex-sm-column justify-content-around align-items-stretch justify-content-sm-center align-items-sm-start">
+    <div >
       <mat-icon inline="true">person</mat-icon>
       {{ user.type }}
     </div>
-    <div class="d-flex w-45" *ngIf="user.progress">
+    <div  *ngIf="user.progress">
       <mat-icon inline="true">info</mat-icon>
       {{ user.progress }}
     </div>
-    <div class="d-flex w-45" *ngIf="user.phone">
+    <div  *ngIf="user.phone">
       <mat-icon inline="true">phone</mat-icon>
       {{ user.phone }}
     </div>
-    <div class="d-flex w-45" *ngIf="user.email">
+    <div  *ngIf="user.email">
       <mat-icon inline="true">mail_outline</mat-icon>
       {{ user.email }}
     </div>
