--- a/src/app/modules/users/components/user-filter/user-filter.component.html
+++ b/src/app/modules/users/components/user-filter/user-filter.component.html
@@ -1,13 +1,13 @@
 <div  class="d-flex flex-row flex-wrap justify-content-center align-items-start">
   <mat-expansion-panel
-    class="d-flex col-11 "
+    class=" col-11 "
     #mepSearch="matExpansionPanel"
     [expanded]="displayMore"
     [hideToggle]="false"
   >
     <mat-expansion-panel-header>
       <div class="d-flex w-100 flex-row flex-wrap justify-content-center align-items-stretch">
-        <mat-form-field class="d-flex fx-fill col-11 col-sm-10 col-md-9">
+        <mat-form-field class="flex-fill col-11 col-sm-10 col-md-9" >
           <!-- Disabled autocomplete -->
           <!-- [matAutocomplete]="auto" -->
           <input
