--- a/src/app/modules/users/components/user-sort/user-sort.component.html
+++ b/src/app/modules/users/components/user-sort/user-sort.component.html
@@ -6,10 +6,10 @@
     [(ngModel)]="sort"
     (change)="closeUserSort()"
   >
-    <mat-radio-button class="d-flex flex-grow-1 mt-3" value="firstName">
+    <mat-radio-button class="flex-grow-1 mt-3" value="firstName">
       {{ 'first-name' | translate | titlecase }}
     </mat-radio-button>
-    <mat-radio-button class="d-flex flex-grow-1 mt-3" value="lastName">
+    <mat-radio-button class="flex-grow-1 mt-3" value="lastName">
       {{ 'last-name' | translate | titlecase }}
     </mat-radio-button>
   </mat-radio-group>
